// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно отрендерить статус неполного отчёта 1`] = `
<div
  className="VinReportStatus"
>
  Отчёт может дополняться. 
  Опрошено 10 из 15 источников. Найдено 5 записей.
</div>
`;

exports[`должен правильно отрендерить статус полного отчёта 1`] = `
<div
  className="VinReportStatus"
>
  Отчёт полностью готов. 
  Опрошено 15 источников. Найдено 5 записей
</div>
`;
